add backend, update code for home page

--- a/authourization-server/src/main/resources/application.yml
+++ b/authourization-server/src/main/resources/application.yml
@@ -8,6 +8,7 @@ app:
   eureka-password: p
   eureka-server: localhost
   security:
+    #change to local URL
     redirect-url: http://localhost:8081
 
 eureka:
