--- a/server/pom.xml
+++ b/server/pom.xml
@@ -52,6 +52,11 @@
 			<version>8.0.27</version> <!-- Use the latest version available -->
 		</dependency>
 		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<optional>true</optional>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
