--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -2,6 +2,7 @@ server.port= 8080
 spring.datasource.url=jdbc:mysql://localhost:3306/fms?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=
+spring.datasource.initialization-mode=always
 
 spring.jpa.hibernate.ddl-auto=update
 spring.data.jpa.repositories.enabled=true
@@ -9,8 +10,6 @@ spring.jpa.show_sql=true
 spring.jpa.database=mysql
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.properties.hibernate.format_sql=true
-spring.sql.init.mode=always
-spring.jpa.defer-datasource-initialization=true
 
 spring.mail.host=smtp.gmail.com
 spring.mail.username=tpm88941@gmail.com
