--- a/authourization-server/src/main/resources/application.yml
+++ b/authourization-server/src/main/resources/application.yml
@@ -28,5 +28,23 @@ logging:
   level:
     root: INFO
 
+spring:
+  datasource:
+    url: jdbc:mysql://localhost:3306/fmsAuth?createDatabaseIfNotExist=true
+    username: root
+    password: khoale
+    initialization-mode: always
+  jpa:
+    hibernate:
+      ddl-auto: update
+    show_sql: true
+    database: mysql
+    properties:
+      hibernate.dialect: org.hibernate.dialect.MySQL8Dialect
+      hibernate.format_sql: true
+  data:
+    jpa:
+      repositories:
+        enabled: true
 ---
 #spring.config.activate.on-profile: docker
