--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port= 8080
 spring.datasource.url=jdbc:mysql://localhost:3306/fms?createDatabaseIfNotExist=true
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=khoale
 spring.datasource.initialization-mode=always
 
 spring.jpa.hibernate.ddl-auto=update
