--- a/authourization-server/src/main/resources/application.yml
+++ b/authourization-server/src/main/resources/application.yml
@@ -32,7 +32,7 @@ spring:
   datasource:
     url: jdbc:mysql://localhost:3306/fmsAuth?createDatabaseIfNotExist=true
     username: root
-    password: khoale
+    password:
     initialization-mode: always
   jpa:
     hibernate:
