Add booking service.

--- a/airline-booking-service/airline-booking-service/src/main/resources/application.yaml
+++ b/airline-booking-service/airline-booking-service/src/main/resources/application.yaml
@@ -1,15 +1,13 @@
-server.port: 8771
+
+server.port: 8089
 server.forward-headers-strategy: framework
 
-spring.application.name: auth-server
+spring.application.name: airline-booking-service
 
 app:
   eureka-username: u
   eureka-password: p
   eureka-server: localhost
-  security:
-    #change to local URL
-    redirect-url: http://localhost:4000
 
 eureka:
   client:
@@ -24,16 +22,11 @@ eureka:
 management.endpoint.health.show-details: "ALWAYS"
 management.endpoints.web.exposure.include: "*"
 
-logging:
-  level:
-    root: INFO
-
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/fmsAuth?createDatabaseIfNotExist=true
+    url: jdbc:mysql://localhost:3306/fms?createDatabaseIfNotExist=true
     username: root
-    password:
-    initialization-mode: always
+    password: khoale
   jpa:
     hibernate:
       ddl-auto: update
@@ -49,5 +42,9 @@ spring:
   sql:
     init:
       mode: always
----
-#spring.config.activate.on-profile: docker
+  security:
+    oauth2:
+      resource-server:
+        jwt:
+          issuer-uri: http://localhost:8771
+
