--- a/gateway/src/main/resources/application.yml
+++ b/gateway/src/main/resources/application.yml
@@ -12,8 +12,6 @@ spring:
           issuer-uri: http://${app.auth-server}:8771
   cloud:
     gateway:
-      default-filters:
-        - DedupeResponseHeader=Access-Control-Allow-Origin Access-Control-Allow-Credentials, RETAIN_UNIQUE
       globalcors:
         cors-configurations:
           '[/**]':
@@ -70,6 +68,26 @@ spring.cloud.gateway.routes:
     uri: lb://auth-server
     predicates:
       - Path=/users/**
+
+  - id: airline-airport
+    uri: lb://airline-booking-service
+    predicates:
+      - Path=/api/airport/**
+
+  - id: airline-booking
+    uri: lb://airline-booking-service
+    predicates:
+      - Path=/api/booking/**
+
+  - id: airline-flight
+    uri: lb://airline-booking-service
+    predicates:
+      - Path=/api/flight/**
+
+  - id: airline-scheduled-flight
+    uri: lb://airline-booking-service
+    predicates:
+      - Path=/api/scheduled-flight/**
 
 #  - id: product-composite-swagger-ui-webjars
 #    uri: lb://product-composite
