--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
     "@types/node": "^20.8.4",
     "bootstrap": "^5.3.2",
     "jquery": "^3.7.1",
+    "ngx-cookie-service": "^16.0.1",
     "ngx-toastr": "^17.0.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
