--- a/airline-booking-service/airline-booking-service/src/main/resources/application.yaml
+++ b/airline-booking-service/airline-booking-service/src/main/resources/application.yaml
@@ -35,6 +35,8 @@ spring:
     properties:
       hibernate.dialect: org.hibernate.dialect.MySQL8Dialect
       hibernate.format_sql: true
+    generate-ddl: true
+    defer-datasource-initialization: true
   data:
     jpa:
       repositories:
