Fix airport/flight apis

--- a/airline-booking-service/airline-booking-service/src/main/resources/application.yaml
+++ b/airline-booking-service/airline-booking-service/src/main/resources/application.yaml
@@ -26,7 +26,7 @@ spring:
   datasource:
     url: jdbc:mysql://localhost:3306/fms?createDatabaseIfNotExist=true
     username: root
-    password:
+    password: khoale
   jpa:
     hibernate:
       ddl-auto: update
