--- a/client/angular.json
+++ b/client/angular.json
@@ -31,7 +31,7 @@
             ],
             "styles": [
               "src/custom-theme.scss",
-              "node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
+              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.scss"
             ],
             "scripts": [
