Add docker and docker compose files

--- a/airline-booking-service/airline-booking-service/pom.xml
+++ b/airline-booking-service/airline-booking-service/pom.xml
@@ -90,6 +90,9 @@
                             <artifactId>lombok</artifactId>
                         </exclude>
                     </excludes>
+                    <layers>
+                        <enabled>true</enabled>
+                    </layers>
                 </configuration>
             </plugin>
         </plugins>
