--- a/airline-booking-service/airline-booking-service/src/main/resources/application.yaml
+++ b/airline-booking-service/airline-booking-service/src/main/resources/application.yaml
@@ -1,5 +1,3 @@
-
-server.port: 8089
 server.forward-headers-strategy: framework
 
 spring.application.name: airline-booking-service
@@ -7,12 +5,16 @@ spring.application.name: airline-booking-service
 app:
   eureka-username: u
   eureka-password: p
-  eureka-server: localhost
+  eureka-server: ${EUREKA_HOST}
+  eureka-port: ${EUREKA_PORT}
+  db-server: ${DB_SERVER}
+  auth-server: ${AUTH_SERVER_HOST}
+  auth-server-port: ${AUTH_PORT}
 
 eureka:
   client:
     serviceUrl:
-      defaultZone: "http://${app.eureka-username}:${app.eureka-password}@${app.eureka-server}:8761/eureka/"
+      defaultZone: "http://${app.eureka-username}:${app.eureka-password}@${app.eureka-server}:${app.eureka-port}/eureka/"
     initialInstanceInfoReplicationIntervalSeconds: 5
     registryFetchIntervalSeconds: 5
   instance:
@@ -24,7 +26,7 @@ management.endpoints.web.exposure.include: "*"
 
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/fms?createDatabaseIfNotExist=true
+    url: jdbc:mysql://${app.db-server}:3306/fms?createDatabaseIfNotExist=true
     username: root
     password:
   jpa:
@@ -48,5 +50,5 @@ spring:
     oauth2:
       resource-server:
         jwt:
-          issuer-uri: http://localhost:8771
+          issuer-uri: http://${app.auth-server}:${app.auth-server-port}
 
