--- a/authourization-server/pom.xml
+++ b/authourization-server/pom.xml
@@ -113,6 +113,9 @@
                             <artifactId>lombok</artifactId>
                         </exclude>
                     </excludes>
+                    <layers>
+                        <enabled>true</enabled>
+                    </layers>
                 </configuration>
             </plugin>
         </plugins>
