--- a/authourization-server/src/main/resources/application.yml
+++ b/authourization-server/src/main/resources/application.yml
@@ -1,4 +1,3 @@
-server.port: 8771
 server.forward-headers-strategy: framework
 
 spring.application.name: auth-server
@@ -6,7 +5,10 @@ spring.application.name: auth-server
 app:
   eureka-username: u
   eureka-password: p
-  eureka-server: localhost
+  eureka-server: ${EUREKA_HOST}
+  eureka-port: ${EUREKA_PORT}
+  db-server: ${DB_SERVER}
+  host-name: ${AUTH_SERVER_NAME}
   security:
     #change to local URL
     redirect-url: http://localhost:4000
@@ -14,7 +16,7 @@ app:
 eureka:
   client:
     serviceUrl:
-      defaultZone: "http://${app.eureka-username}:${app.eureka-password}@${app.eureka-server}:8761/eureka/"
+      defaultZone: "http://${app.eureka-username}:${app.eureka-password}@${app.eureka-server}:${app.eureka-port}/eureka/"
     initialInstanceInfoReplicationIntervalSeconds: 5
     registryFetchIntervalSeconds: 5
   instance:
@@ -30,7 +32,7 @@ logging:
 
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/fmsAuth?createDatabaseIfNotExist=true
+    url: jdbc:mysql://${app.db-server}:3306/fmsAuth?createDatabaseIfNotExist=true
     username: root
     password:
     initialization-mode: always
