--- a/eureka-service/eureka-service/pom.xml
+++ b/eureka-service/eureka-service/pom.xml
@@ -72,6 +72,9 @@
                             <artifactId>lombok</artifactId>
                         </exclude>
                     </excludes>
+                    <layers>
+                        <enabled>true</enabled>
+                    </layers>
                 </configuration>
             </plugin>
         </plugins>
